# DroXyd

./: AUTHORS  README.md
PostQuery/: Cargo.toml  Debug.txt  Dic.txt
PostQuery/src/: main.rs  models.rs
PostQuery/templates/: hello.html.hbs  root.html.hbs
Site/: index.html  people.html  projet.html  script.js  style.css
droxyd/: Cargo.toml  database.db
droxyd/migrations/2024-04-09-160144_create_posts/: down.sql  up.sql
droxyd/public/css/: hello.min.css  pico.min.css
droxyd/src/: lib.rs  main.rs  models.rs  schema.rs
droxyd/src/bloom_filter/: README.md  VIP_is_for_Very_Important_Priority  bloom_filter.rs  false_positive_prob_calculator.rs  fill_filter.rs  hash_functions.rs  is_present.rs  mod.rs
droxyd/src/crawl_web/: README.md  crawler.rs  get_content.rs  mod.rs
droxyd/src/parser/: models.rs:Zone.Identifier  parser.rs
droxyd/src/postquery/: Dic-en.txt  Dic-fr.txt  models.rs
droxyd/src/processing/: cleansing.rs  demo.rs  extraction.rs  language.rs  mod.rs
droxyd/src/processing/sources/: en-determinants.txt  fr-determinants.txt  src4.html
droxyd/templates/: hello.html.hbs  root.html.hbs
scraper/: Cargo.toml
scraper/src/: main.rs
scraper/src/processing/: .IO_helper.rs.swp  .cleansing.rs.swp  IO_helper.rs  cleansing.rs  demo.rs  extraction.rs  language.rs  mod.rs  src2.txt  src3.html  src3.txt  src_demo.html
scraper/src/processing/sources/: iso639-1.txt  src1.html
sqlquery/: Cargo.toml
sqlquery/migrations/2024-04-09-160144_create_posts/: up.sql
sqlquery/src/: main.rs  schema.rs
