[package]
name = "PostQuery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
normpath = "1.1.0"
rocket = "0.5.0"
open = "5"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }