[package]
name = "droxyd"
version = "0.1.0"
edition = "2021"

# LEO added the following line:
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LEO added the following lines:
# {
queues = "1.1.0"
reqwest = { version = "0.12.3", features = ["blocking"] }
tokio = { version = "1", features = ["full"] } # Works without this lib
rand = "0.8"
# }

# QUENTIN added the following lines:
# {
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
proc-macro2 = "=1.0.79"
# }

# ALEXANDRE added the following lines:
# {
normpath = "1.1.0"
rocket = "0.5.0"
open = "5"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }
#proc-macro2 = "=1.0.79"
# }
